--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.4.13"
+    "mongoose": "^5.4.13",
+    "react-router": "^4.3.1"
   }
 }
